add eventlistener to display pressed numbers and clear them

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p id="value">0</p>
         </div>
         <div id="calculator">
-                <button class="action">C</button>
+                <button id="clear" class="action">C</button>
                 <button class="action">Del</button>
                 <button class="action">%</button>
                 <button>&divide;</button>
