--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
 </head>
 <body>
     <div id="main" class="flexbox-center">
-        <div id="screen">
+        <div id="display">
             <p id="value">0</p>
+            <p id="liveCalc">0</p>
         </div>
         <div id="calculator">
                 <button id="clear" class="action">C</button>
                 <button class="action">Del</button>
                 <button class="action">%</button>
-                <button>&divide;</button>
+                <button class="operation">/</button>
                 <button class="number">7</button>
                 <button class="number">8</button>
                 <button class="number">9</button>
-                <button>x</button>
+                <button class="operation">*</button>
                 <button class="number">4</button>
                 <button class="number">5</button>
                 <button class="number">6</button>
-                <button>-</button>
+                <button class="operation">-</button>
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button>+</button>
+                <button class="operation">+</button>
                 <button class="number zero">0</button>
                 <button class="number">.</button>
-                <button>=</button>
+                <button id="equals">=</button>
         </div>
     </div>
 </body>
